# HunyuanMT-Crane

./: .gitignore  Cargo.toml  README.md  curr_qwen3.rs  test_reshape.rs
crane/: Cargo.toml
crane-core/: Cargo.toml  build.rs
crane-core/kernels/: fused_ops.cu
crane-core/src/: autotokenizer.rs  cuda_graph.rs  lib.rs
crane-core/src/fused_ops/: cuda_impl.rs  mod.rs
crane-core/src/generation/: streamer.rs
crane-core/src/models/: mod.rs  paddleocr_vl.rs  qwen3.rs
crane-core/src/models/hunyuan_dense/: mod.rs  model.rs  modeling.rs
crane-core/src/models/qwen25/: model.rs
crane-core/src/models/qwen3/: mod.rs  model.rs  modeling.rs
crane-core/src/models/qwen3_tts/: mod.rs  model.rs  modeling.rs  speech_tokenizer_v2.rs
crane-core/src/models/qwen3_vl/: config.rs  processor.rs
crane-core/src/utils/: image_utils.rs  mod.rs
crane-oai/: Cargo.toml  README.md
crane-oai/src/: chat_template.rs  main.rs  openai_api.rs  sglang_api.rs
crane-oai/src/engine/: backend.rs  mod.rs  model_factory.rs  sampling.rs  scheduler.rs  sequence.rs  stats.rs  types.rs
crane-oai/src/handlers/: sglang.rs
crane/src/common/: config.rs
crane/src/llm/: client.rs
crane/src/vision/: ocr.rs
data/audio/: kinsenka_3.txt
example/: Cargo.toml  README.md
example/src/: hunyuan_simple.rs  ocr_simple.rs  tts_custom_voice.rs  tts_simple.rs  tts_voice_clone.rs
